fixes header alignment

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -602,15 +602,16 @@ footer {
 }
 
 // LOGIN
-#content {
+#registration {
   text-align: center;
   background-color: $light-grey;
   padding-bottom: 2em;
-  h1 {
-    margin: 0;
-    padding: 2em 0;
-  }
 }
+
+h1 {
+  display: none;
+}
+
 
 fieldset {
   border: none;
